<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_add_task"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_task_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:background="@color/white"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawableEnd="@drawable/ic_write"
                android:drawablePadding="4dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:text="@string/title"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:hint="@string/hint"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textColorHint="@color/black_alpha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/title_tv"
                app:layout_constraintTop_toBottomOf="@id/title_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_time"
                android:drawablePadding="4dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:text="@string/time"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_et" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:hint="00:00"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textColorHint="@color/black_alpha"
                app:layout_constraintEnd_toStartOf="@id/calendar_et"
                app:layout_constraintStart_toStartOf="@id/time_tv"
                app:layout_constraintTop_toBottomOf="@id/time_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calendar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="4dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:text="@string/calendar"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/calendar_et"
                app:layout_constraintTop_toBottomOf="@id/title_et" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calendar_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:hint="dd:mm:yyyy"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textColorHint="@color/black_alpha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/time_et"
                app:layout_constraintTop_toBottomOf="@id/time_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repeat_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_repeat"
                android:drawablePadding="4dp"
                android:fontFamily="@font/alte_haas_grotesk_regular"
                android:text="@string/repeat"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_et" />

            <Spinner
                android:id="@+id/spinner_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/repeat_tv"
                app:layout_constraintTop_toBottomOf="@id/repeat_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_add_task_title"
        android:fontFamily="@font/alte_haas_grotesk_bold"
        android:text="@string/add_task_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/add_task_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>